chore: fix deprecations (#26)
Co-authored-by: Marco De Toma <marco.de.toma@fastned.nl>