@@ -8,7 +8,6 @@ import org.apache.hc.core5.http.EntityDetails;
 import org.apache.hc.core5.http.message.BasicHeader;
 import org.apache.hc.core5.http.protocol.HttpContext;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -17,6 +16,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
@@ -77,7 +77,7 @@ class IbanitySignatureInterceptorTest {
     }
 
     private URL getUrl() throws MalformedURLException {
-        return new URL(BASE_PATH + "/path");
+        return URI.create(BASE_PATH + "/path").toURL();
     }
 
     private Map<String, String> getRequestedHeaders() {
